#1077 : replace URL by URI to allow non standard protocol (#1090)
* #1077 : replace URL by URI to allow non standard protocol

* Update ExtractURL.java